<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_width="match_parent">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="127.0.0.1"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <group >
        <item
            android:id="@+id/action_theme_light"
            android:orderInCategory="3"
            android:title="@string/theme_menu_dark"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_theme_dark"
            android:orderInCategory="4"
            android:title="@string/theme_menu_bright"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_theme_basic"
            android:orderInCategory="2"
            android:title="@string/theme_menu_basic"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom"
        />

</menu>