<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:id="@+id/myview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/tub_butts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/butt_diag"
                    style="@style/TabButton"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="24dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/butt_diag"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="goToMain"/>

                <Button
                    android:id="@+id/butt_all"
                    style="@style/TabButton"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="goToAll"
                    android:text="@string/butt_all"
                    app:layout_constraintStart_toEndOf="@+id/butt_diag"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/butt_watched"
                    style="@style/TabButton"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/butt_all"
                    android:onClick="goToWatched"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/butt_watched"
                    app:layout_constraintStart_toEndOf="@+id/butt_all"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/butt_fixed"
                    style="@style/TabButton"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/butt_watched"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/butt_fixed"
                    android:textSize="10sp"
                    app:layout_constraintStart_toEndOf="@+id/butt_watched"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="goToFixed"/>

                <Button
                    android:id="@+id/butt_statistic"
                    style="@style/TabButtonActive"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/butt_fixed"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/butt_statistic"
                    android:textSize="10sp"
                    app:layout_constraintStart_toEndOf="@+id/butt_watched"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
        </HorizontalScrollView>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            android:paddingRight="24dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myview">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/white">

                <view
                    android:id="@+id/bar_view"
                    class="im.dacer.androidcharts.BarView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="5dp"
                    android:textColor="@color/white" />

            </HorizontalScrollView>


        </LinearLayout>

        <EditText
            android:id="@+id/limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/black"
            android:hint="Лимит запросов, по умолчанию 5"
            android:inputType="number"
            android:padding="30dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
