<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools" tools:context=".FireBase.AuthActivity"
android:layout_width="match_parent"
android:layout_height="match_parent"
 android:background="@color/grey">

    <ImageButton
        android:id="@+id/app_icon"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="84dp"
        android:background="@drawable/app_image_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_icon"
        android:layout_centerInParent="true"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal|center_vertical"
        android:padding="13dp"
        android:text="@string/login_label"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_icon" />

    <EditText
        android:id="@+id/email"
        android:layout_width="293dp"
        android:layout_height="48dp"
        android:layout_below="@+id/label"
        android:layout_centerInParent="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/auth_form_item"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <EditText
        android:id="@+id/password"
        android:layout_width="293dp"
        android:layout_height="48dp"
        android:layout_below="@+id/email"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/auth_form_item"
        android:hint="Пароль"
        android:inputType="textVisiblePassword"
        android:padding="13dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/sign_butt"
        android:layout_width="293dp"
        android:layout_height="48dp"
        android:layout_below="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:onClick="EmailSignIn"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="293dp"
        android:layout_height="52dp"
        android:layout_below="@+id/sign_butt"
        android:layout_marginBottom="50dp"
        android:background="@drawable/google_butt_frame"
        android:onClick="googleSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/sign_google_butt"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/google_white"
                android:onClick="googleSignIn" />

            <Button
                android:id="@+id/label_google"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/sign_google_butt"
                android:background="@color/black"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="googleSignIn"
                android:text="@string/google_label"
                android:textColor="@color/white"
                app:layout_constraintLeft_toRightOf="@id/sign_google_butt" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>